# Bot_AX_Contable

./: .gitignore  Crear_Acceso_Directo.vbs  HOJA_DE_RUTA.md  INSTALACION.md  Lanzar.ps1  Lanzar_Bot.bat  Lanzar_Bot_Registro.bat  Lanzar_Bot_Universal.bat  README.md  _version.py  app_gui.py  app_gui_qt.py  bot_ax_registro.py  bot_main.py  bump_version.py  compile_bot.bat  compile_local.ps1  config.py  config_sectores.json  config_sectores.json.default  crash_log.txt  debug_ocr.py  debug_pantalla.py  diag_output.txt  diag_output_09.txt  diagnose_vision.py  diagnostico.py  install_prereqs.ps1  keygen.py  license_manager.py  logger.py  path_utils.py  pyproject.toml  python_cmd.local.txt.example  registro_2026-03-12.txt  registro_procesamiento.txt  requirements.txt  setup_areas.py  setup_env.py  shortcut_manager.py  (+5 more)
.agent/workflows/: bot_ax_workflow.md  pregunta.md
.githooks/: pre-commit
agents/: AGENTS.md  README.md  orquestador.agent.md  run_orquestador.py
docs/: auditoria-proyecto.md  estructura_proyecto.md  flujo-del-bot.md  flujo_ciclo.md  manual_proceso_bot.md  plan-restructuracion.md
prompts/: explore.prompt.md  implement.prompt.md  orquestador.prompt.md  test-runner.prompt.md  verify.prompt.md
scripts/: bump_version.py  check_ocr.py  debug_ocr.py  debug_pantalla.py  diagnose_vision.py  observer_analyze.py  observer_watch.py  setup.py  test_ocr.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_config.py  test_vision.py
workflows/: explore.workflow.md  implement.workflow.md  orquestador.workflow.md  test-runner.workflow.md  verify.workflow.md
(+39 files in other folders)
